# 3d-renderer-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Canvas.cpp  Canvas.h  ObjParser.cpp  ObjParser.h  canvas.cpp  canvas.h  color.h  config.h  obj_parser.cpp  obj_parser.h
core/Rastering/: CloudRaster.cpp  CloudRaster.h
core/matrix/: Matrix4x4.h  matrix.h
core/model/: Model.cpp  Model.h  face.h  model.cpp  model.h
core/primitives/line/: Bresenham.cpp  Bresenham.h  DDA.cpp  DDA.h  Line.h  MidPoint.cpp  MidPoint.h  bresenham.cpp  bresenham.h  dda.cpp  dda.h  line.h  middle_point.cpp  middle_point.h
core/projection/: Perspective.cpp  Perspective.h  PerspectiveProjection.cpp  PerspectiveProjection.h  perspective.cpp  perspective.h  projection.h
core/rasterization/: Cloud.cpp  Cloud.h  cloud.cpp  cloud.h
core/rendering/: cloud.cpp  cloud.h  flat.cpp  flat.h  flat_fill.cpp  flat_fill.h  renderer.h  skelethon.cpp  skelethon.h
core/transformation/: transformation.cpp  transformation.h
core/vector/: Vector.h  vector2.h  vector3.h  vector4.h
ui/: SDLWindow.cpp  SDLWindow.h  sdl_window.cpp  sdl_window.h
